--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "directories": {
     "lib": "lib",
     "test": "test"
-    
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
@@ -22,10 +21,10 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   },
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --mode=development --watch",
