--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "travis": "^0.1.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   },
