--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": ".split() is a clone of [Splitwise](https://www.splitwise.com/), an interpersonal finance app that allows consumers to split expenses with friends. If a group needs to share the cost of a particular bill, .split() ensures that anyone who pays is reimbursed the correct amount and with a minimal number of transactions.",
   "main": "index.js",
   "engines": {
-    "node": "14.x",
+    "node": ">=14.17.6",
     "npm": ">=7.24.0"
   },
   "directories": {
