--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fortawesome": "^0.0.1-security",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
